--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -31,25 +31,21 @@
                             th:href="@{/homepage}">Home
                     </a>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link" style="color: black;font-size: larger;"
                             th:href="@{/transfer}">Transfer
                     </a>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link " style="color: black;font-size: larger;"
                             th:href="@{/profile}">Profile
                     </a>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link " style="color: black;font-size: larger;"
                             href="mailto:admin@paymybuddy.com">Contact
                     </a>
                 </li>
-
                 <li class="nav-item">
                     <a sec.authorize="isAuthenticated()" class="nav-link" style="color: black; font-size: larger;"
                             th:href="@{/login}">Log off
@@ -59,7 +55,7 @@
         </div>
     </div>
 </nav>
-<!--<div class="container h-100">-->
+<div class="container h-100">
     <h1 class="text-success fw-light">My Profile</h1>
     <hr class="text-light">
 
@@ -74,8 +70,9 @@
                 <table class="table table-light table-bordered table-striped table-hover text-center table-sm">
                     <thead class="table-secondary">
                         <tr>
-                            <th class="text-center text-success col-md-8">Iban</th>
-                            <th class="text-center text-success col-md-4">Action</th>
+                            <th class="text-center text-success col-md-5">Iban</th>
+<!--                            <th class="text-center text-success col-md-5">Bank</th>-->
+                            <th class="text-center text-success col-md-2">Action</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -93,95 +90,101 @@
         </div>
     </div>
     <hr class="text-light">
-////////////////////////////////////////////////////////////////////////////
+ <!--//////////////////////////////////////////////////////////-->
     <!-- Selector transfer from account to application -->
-<!--    <div class="col-12">-->
-<!--        <h3 class="text-success fw-light mb-4">Transfer to balance</h3>-->
-<!--        <div align="center">-->
-<!--            <form action="#" th:action="@{/transferToApplication}" method="get">-->
-<!--                <div class="row">-->
-<!--                    <div class="col-4">-->
-<!--                        <select class="form-select" th:name="accounts">-->
-<!--                            <option-->
-<!--                                    th:each="account : ${accounts}"-->
-<!--                                    th:text="${account.getUser()}"-->
-<!--                                    th:value="${account.getId()}"-->
-<!--                            >Select a Bank account-->
-<!--                            </option>-->
-<!--                        </select>-->
-<!--                    </div>-->
-<!--                    <div class="col-4 input-group">-->
-<!--                        <input class="form-control" placeholder="Amount" th:name="amount" type="number">-->
-<!--                        <span class="input-group-text">€</span>-->
-<!--                    </div>-->
-<!--                    <div class="col-4 ">-->
-<!--                        <button class="btn btn-primary" type="submit">Valid Movement</button>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </form>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    <br>-->
-<!--     Selector transfer from application to account-->
-<!--    <div class="col">-->
-<!--        <h3 class="text-success fw-light mb-4">Transfer to account</h3>-->
-<!--        <div align="center">-->
-<!--            <form action="#" th:action="@{/transferToAccountBank}" method="get">-->
-<!--                <div class="row">-->
-<!--                    <div class="col-4 align-middle">-->
-<!--                        <select class="form-select" th:name="accounts">-->
-<!--                            <option-->
-<!--                                    th:each="account : ${accounts}"-->
-<!--                                    th:text="${account.getUser()}"-->
-<!--                                    th:value="${account.getId()}"-->
-<!--                            >Select a Bank account-->
-<!--                            </option>-->
-<!--                        </select>-->
-<!--                    </div>-->
-<!--                    <div class="col-4 input-group">-->
-<!--                        <input class="form-control" placeholder="Amount" th:name="amount" type="number">-->
-<!--                        <span class="input-group-text">€</span>-->
-<!--                    </div>-->
-<!--                    <div class="col-4">-->
-<!--                        <button class="btn btn-primary" type="submit">Valid Movement</button>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </form>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    <br>-->
+    <div class="col-12">
+        <h3 class="text-success fw-light mb-4">Transfer to balance</h3>
+        <div align="center">
+            <form action="#"  method="get"
+                  th:action="@{/movement/transferToApplication}">
+
+                <div class="row">
+                    <div class="col-4">
+                        <select class="form-select" th:name="accounts">
+                            <option selected>Select a account to recharge Balance
+                            <option
+                                    th:each="account : ${accounts}"
+                                    th:text="${account.getIban()}"
+                                    th:value="${account.getId()}">
+                            </option>
+                        </select>
+                    </div>
+                    <div class="col-4 input-group">
+                        <input class="form-control" placeholder="Amount" th:name="amount" type="number">
+                        <span class="input-group-text">€</span>
+                    </div>
+                    <div class="col-4 ">
+                        <button class="btn btn-primary" type="submit">Valid Movement</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <br>
+     <!--Selector transfer from application to account -->
+    <div class="col">
+        <h3 class="text-success fw-light mb-4">Transfer to account</h3>
+        <div align="center">
+            <form action="#" method="get"
+                  th:action="@{/movement/transferToAccountBank}"
+                  th:object="${movement}">
+                <div class="row">
+                    <div class="col-4 align-middle">
+                        <select class="form-select" th:name="accounts">
+                            <option selected>Select a account to recharge your Account
+                            <option
+                                    th:each="account : ${accounts}"
+                                    th:text="${account.getIban()}"
+                                    th:value="${account.getId()}">
+                            </option>
+                        </select>
+                    </div>
+                    <div class="col-4 input-group">
+                        <input class="form-control" placeholder="Amount" th:name="amount" type="number">
+                        <span class="input-group-text">€</span>
+                    </div>
+                    <div class="col-4">
+                        <button class="btn btn-primary" type="submit">Valid Movement</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <br>
 <!--     Alert message-->
-<!--&lt;!&ndash;    <p class="alert alert-danger text-center" th:if="${error}" th:text="${error}"></p>&ndash;&gt;-->
-<!--    <hr class="text-white">-->
-<!--    &lt;!&ndash; Contact List Action &ndash;&gt;-->
-<!--    <div class="col">-->
-<!--        <h3 class="text-success fw-light my-4">Contact list</h3>-->
-<!--    </div>-->
-<!--    <hr class="text-white">-->
-<!--    <div class="row justify-content-center">-->
-<!--        <div class="col-10">-->
-<!--            <table class="table table-light table-bordered table-striped table-hover text-center table-sm">-->
-<!--                <thead class="table-secondary">-->
-<!--                <tr>-->
-<!--                    <th class="text-center text-success col-md-8">Contact Name</th>-->
-<!--                    <th class="text-center text-success col-md-4">Action</th>-->
-<!--                </tr>-->
-<!--                </thead>-->
-<!--                <tbody>-->
-<!--                <tr th:each="contact : ${contacts}">-->
-<!--                    <td-->
-<!--                            th:text="${contact.getUserContact().getFirstName() + ' ' + contact.getUserContact().getLastName()}">-->
-<!--                    </td>-->
-<!--                    <td class="text-white">-->
-<!--                        <a th:href="@{/user/deleteContact(contactId=${contact.getId()})}"-->
-<!--                                class="btn btn-danger"-->
-<!--                        >Delete</a>-->
-<!--                    </td>-->
-<!--                </tr>-->
-<!--                </tbody>-->
-<!--            </table>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
+<!--    <p class="alert alert-danger text-center" th:if="${error}" th:text="${error}"></p>-->
+
+
+    <hr class="text-white">
+    <!-- Contact List Action -->
+    <div class="col">
+        <h3 class="text-success fw-light my-4">Contact list</h3>
+    </div>
+    <hr class="text-white">
+    <div class="row justify-content-center">
+        <div class="col-10">
+            <table class="table table-light table-bordered table-striped table-hover text-center table-sm">
+                <thead class="table-secondary">
+                <tr>
+                    <th class="text-center text-success col-md-8">Contact Name</th>
+                    <th class="text-center text-success col-md-4">Action</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="contact : ${contacts}">
+                    <td
+                          th:text="${contact.getUserContact().getFirstName() + ' ' + contact.getUserContact().getLastName()}">
+                    </td>
+                    <td class="text-white">
+                        <a th:href="@{/user/deleteContact(contactId=${contact.getId()})}"
+                                class="btn btn-danger">Delete
+                        </a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
 </html>
