--- a/src/main/resources/templates/transfer.html
+++ b/src/main/resources/templates/transfer.html
@@ -28,32 +28,27 @@
 
         <div class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
             <ul class="navbar-nav">
-
                 <li class="nav-item ">
                     <a class="nav-link" style="color: black;font-size: larger;"
                        th:href="@{/homepage}">Home
                     </a>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link" style="color: black;font-size: larger;"
                        th:href="@{/transfer}">Transfer
                     </a>
                 </li>
-
                 <li class="nav-item">
                     <a  class="nav-link " style="color: black;font-size:
                     larger;"
                         th:href="@{/profile}">Profile
                     </a>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link "  style="color: black;font-size: larger;"
                        href="mailto:admin@paymybuddy.com">Contact
                     </a>
                 </li>
-
                 <li class="nav-item">
                     <a sec.authorize="isAuthenticated()" class="nav-link" style="color: black; font-size: larger;"
                        th:href="@{/login}">Log off
@@ -82,7 +77,7 @@
         <!-- Section Add Contact -->
 
         <div align="center">
-            <form  method="post" th:action="@{/saveContact}">
+            <form  method="post" th:action="@{/transfer/saveContact}">
                 <div class="col ">
                     <div class="row">
                         <div align="left">
@@ -112,27 +107,26 @@
         <div class="row bg-light p-3 m-2">
             <div class="col">
                 <div class="container h-100">
-                    <form class="justify-content-center" action="#" method="POST"
-                          th:action="@{/transaction/save}"
-                          th:object="${transactions}">
+                    <form class="justify-content-center" action="#" method="get"
+                          th:action="@{/transfer/send}">
+
                          <!--Filling fiel contact transaction -->
                         <div class="row">
                             <!-- Selector for contact transaction-->
-                                <div class="col" style=" top: 5px">
-                                    <select class="form-select" th:name="emailContact">
-                                        <option selected>Select a Contact
-                                        <option
-                                                th:each="contact : ${contacts}"
-                                                th:text="${contact.getUserContact().getFirstName()+ ' '+contact.getUserContact().getLastName()}"
-                                                th:value="${contact.getUserContact().getEmail()}">
-                                        </option >
-                                    </select>
-                                </div>
-
-
+                            <div class="col" style=" top: 5px">
+                                <select class="form-select" th:name="emailContact">
+                                    <option selected>Select a Contact
+                                    <option
+                                            th:each="contact : ${contacts}"
+                                            th:text="${contact.getUserContact().getFirstName()+ ' '+ contact.getUserContact().getLastName()}"
+                                            th:value="${contact.getUserContact().getEmail()}">
+                                    </option>
+                                </select>
+                            </div>
                             <!-- Selector amount to contact transaction-->
                             <div class="col input-group">
-                                <input class="form-control" placeholder="Amount" th:name="amount"type="number">
+                                <input class="form-control" placeholder="Amount"  th:name="amount"
+                                       type="number" step="0.01" >
                                 <span class="input-group-text">€</span>
                             </div>
                             <!-- Champ Description-->
@@ -142,9 +136,7 @@
                             </div>
                             <!-- Pay Bouton -->
                             <div class="col text-center">
-                                <button class="col-10 btn btn-success " type="submit">
-                                    Pay
-                                </button>
+                                <button class="col-10 btn btn-success " type="submit">Pay</button>
                             </div>
                         </div>
                     </form>
